# iolanta-roadmap

./: pyproject.toml
docs/: datafold-docs.yaml
docs/project/: happy.yaml  iolanta-v2.yaml  iolanta-whitepaper.yaml  todo.yaml
docs/roadmap/project/: datafold.yaml  iolanta-roadmap.yaml
iolanta_roadmap/: __init__.py  plugin.py
iolanta_roadmap/data/: roadmap.yaml
iolanta_roadmap/facets/: roadmap.py
iolanta_roadmap/facets/sparql/: tasks.sparql
tests/: conftest.py  test_svg.py
